--- a/.github/workflows/code_analysis.yml
+++ b/.github/workflows/code_analysis.yml
@@ -1,54 +1,52 @@
 name: Code Analysis
 
 on:
-    pull_request: null
-    push:
-        # Prevent duplicating jobs on PR-s from local branches
-        branches:
-            - "main"
+  pull_request:
+  push:
+    branches:
+      - main
 
 jobs:
-    code_analysis:
-        strategy:
-            fail-fast: false
-            matrix:
-                actions:
-                    -
-                        name: 'ECS'
-                        run: 'vendor/bin/ecs'
+  code_analysis:
+    strategy:
+      fail-fast: false
+      matrix:
+        actions:
+          - name: ECS
+            run: vendor/bin/ecs
+          - name: PHPStan
+            run: vendor/bin/phpstan
+          - name: Unit Tests
+            run: vendor/bin/phpunit --coverage-clover=coverage.xml
+            coverage: xdebug
+          - name: Check Commented Code
+            run: vendor/bin/easy-ci check-commented-code src tests --ansi
+          - name: Check Active Classes
+            run: vendor/bin/class-leak check src --ansi --skip-type=TomasVotruba\\Bladestan\\ErrorReporting\\PHPStan\\ErrorFormatter\\BladeTemplateErrorFormatter
 
-                    -
-                        name: 'PHPStan'
-                        run: 'vendor/bin/phpstan'
+    name: ${{ matrix.actions.name }}
+    runs-on: ubuntu-latest
 
-                    -
-                        name: 'Unit Tests'
-                        run: 'vendor/bin/phpunit'
+    steps:
+      - uses: actions/checkout@v4
 
-                    -
-                        name: 'Check Commented Code'
-                        run: vendor/bin/easy-ci check-commented-code src tests --ansi
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.2
+          extensions: mbstring
 
-                    -
-                        name: 'Check Active Classes'
-                        run: vendor/bin/class-leak check src --ansi --skip-type=TomasVotruba\\Bladestan\\ErrorReporting\\PHPStan\\ErrorFormatter\\BladeTemplateErrorFormatter
+      - if: matrix.actions.name == 'Unit Tests'
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.2
+          coverage: xdebug
 
-        name: ${{ matrix.actions.name }}
-        runs-on: ubuntu-latest
+      - uses: ramsey/composer-install@v3
 
-        steps:
-            -   uses: actions/checkout@v2
+      - run: ${{ matrix.actions.run }}
 
-            # see https://github.com/shivammathur/setup-php
-            -   uses: shivammathur/setup-php@v2
-                with:
-                    php-version: 8.2
-                    # needed by phpunit
-                    extensions: mbstring
-                    # to disable xdebug
-                    coverage: none
-
-            # composer install cache - https://github.com/ramsey/composer-install
-            -   uses: "ramsey/composer-install@v2"
-
-            -   run: ${{ matrix.actions.run }}
+      - name: Upload coverage reports to Codecov
+        if: matrix.actions.name == 'Unit Tests'
+        uses: codecov/codecov-action@v5
+        with:
+          files: ./coverage.xml
