--- a/.github/workflows/rector.yaml
+++ b/.github/workflows/rector.yaml
@@ -1,35 +1,18 @@
-# github action that checks code with Rector
 name: Rector
 
 on:
-    pull_request: null
+  pull_request:
+  push:
+    branches:
+      - main
 
 jobs:
-    rector:
-        runs-on: ubuntu-latest
-        if: github.event.pull_request.head.repo.full_name == 'bladestan/bladestan'
-        steps:
-            -
-                if: github.event.pull_request.head.repo.full_name == github.repository
-                uses: actions/checkout@v3
-                with:
-                    # Must be used to trigger workflow after push
-                    token: ${{ secrets.ACCESS_TOKEN }}
-
-            -
-                uses: shivammathur/setup-php@v2
-                with:
-                    php-version: 8.3
-                    coverage: none
-
-            -   uses: "ramsey/composer-install@v2"
-
-            -   run: vendor/bin/rector --ansi
-
-            -
-                # commit only to core contributors who have repository access
-                uses: stefanzweifel/git-auto-commit-action@v4
-                with:
-                    commit_message: '[rector] Rector fixes'
-                    commit_author: 'GitHub Action <actions@github.com>'
-                    commit_user_email: 'action@github.com'
+  rector:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.3
+      - uses: ramsey/composer-install@v2
+      - run: vendor/bin/rector --ansi
