--- a/composer.json
+++ b/composer.json
@@ -5,24 +5,22 @@
     "type": "phpstan-extension",
     "keywords": ["static analysis", "phpstan-extension"],
     "require": {
-        "php": "^8.1",
-        "illuminate/contracts": "^9.0 || ^10.0 || ^11.0",
-        "illuminate/filesystem": "^9.0 || ^10.0 || ^11.0",
-        "illuminate/view": "^9.0 || ^10.0 || ^11.0",
+        "php": "^8.2",
+        "illuminate/contracts": "^11.15",
+        "illuminate/filesystem": "^11.15",
+        "illuminate/mail": "^11.15",
+        "illuminate/notifications": "^11.15",
+        "illuminate/view": "^11.15",
         "larastan/larastan": "^3.0",
-        "livewire/livewire": "^2.0 || ^3.0",
-        "phpstan/phpstan": "^2.0"
+        "livewire/livewire": "^3.3.5",
+        "phpstan/phpstan": "^2.0.1"
     },
     "require-dev": {
-        "laravel/framework": "^11.0",
-        "nikic/php-parser": "^5.3",
         "orchestra/testbench": "^9.9",
-        "phpunit/phpunit": "^11.0",
+        "phpunit/phpunit": "^11.3.6",
         "rector/rector": "^2.0",
-        "symplify/easy-ci": "^11.3",
-        "symplify/easy-coding-standard": "^12.1",
-        "tomasvotruba/class-leak": "^0.2.6",
-        "tracy/tracy": "^2.9"
+        "symplify/easy-coding-standard": "^12.1.1",
+        "tomasvotruba/class-leak": "^0.2.6"
     },
     "autoload": {
         "psr-4": {
