--- a/composer.json
+++ b/composer.json
@@ -6,21 +6,21 @@
     "keywords": ["static analysis", "phpstan-extension"],
     "require": {
         "php": "^8.2",
-        "illuminate/contracts": "^11.15",
-        "illuminate/filesystem": "^11.15",
-        "illuminate/mail": "^11.15",
-        "illuminate/notifications": "^11.15",
-        "illuminate/view": "^11.15",
+        "illuminate/contracts": "^11.15|^12.0",
+        "illuminate/filesystem": "^11.15|^12.0",
+        "illuminate/mail": "^11.15|^12.0",
+        "illuminate/notifications": "^11.15|^12.0",
+        "illuminate/view": "^11.15|^12.0",
         "larastan/larastan": "^3.0",
         "livewire/livewire": "^3.3.5",
         "phpstan/phpstan": "^2.0.1"
     },
     "require-dev": {
-        "orchestra/testbench": "^9.9",
+        "orchestra/testbench": "^9.9|^10.0",
         "phpunit/phpunit": "^11.3.6",
         "rector/rector": "^2.0",
         "symplify/easy-coding-standard": "^12.1.1",
-        "tomasvotruba/class-leak": "^0.2.6"
+        "tomasvotruba/class-leak": "^2.0"
     },
     "autoload": {
         "psr-4": {
