--- a/config/extension.neon
+++ b/config/extension.neon
@@ -7,6 +7,7 @@ parameters:
 
 rules:
     - Bladestan\Rules\BladeRule
+    - Bladestan\Rules\BladeCollectorProxyRule
 
 services:
     errorFormatter.blade:
@@ -47,3 +48,8 @@ services:
         class: Bladestan\PhpParser\NodeVisitor\ViewFunctionArgumentsNodeVisitor
         tags:
             - phpstan.parser.richParserNodeVisitor
+
+    -
+        class: Bladestan\Collector\BladeCollector
+        tags:
+            - phpstan.collector
